--- a/presente/presente.html
+++ b/presente/presente.html
@@ -18,7 +18,7 @@
     <div id="cafe">
 
     <a href="../resgatado/resgatado.html">
-        <p>Café da manhã gourmet</p>
+        <p>Hamburguer</p>
     </a>
 
     </div>
@@ -27,7 +27,7 @@
     <div id="fast">
 
         <a href="../resgatado/resgatado.html">
-            <p>Fast food favorito</p>
+            <p>Fast Açai</p>
         </a>
     
     </div>
@@ -36,7 +36,7 @@
     <div id="cine">
 
         <a href="../resgatado/resgatado.html">
-            <p>Cineminha</p>
+            <p>Uma música que eu cante pra você</p>
         </a>
     
         </div>
