--- a/acesso/acesso.html
+++ b/acesso/acesso.html
@@ -27,9 +27,9 @@
 
                 <p id="negado">Acesso negado !</p>
 
-                <input required type="text" placeholder="Nome de Usuário" autofocus class="usuario">
+                <input required type="text" placeholder="Alice" autofocus class="Alice">
 
-                <input required type="password" placeholder="Senha" class="senha">
+                <input required type="password" placeholder="amor da vida dele" class="amor da vida dele">
 
                 <input type="submit" value="ENTRAR" onclick="send(); return false">
 
