--- a/home/home.html
+++ b/home/home.html
@@ -16,17 +16,17 @@
 
         <div id="texto">
     
-<h1>Olá, ....... &#128151</h1>
+<h1>Olá, Maria Alice &#128151</h1>
 
-<p>Você acessou a <strong>central de sentimentos</strong> de "". </p>
+<p>Você acessou a <strong>central de sentimentos</strong> de Isac. </p>
 
-<p>Dados comprovam que "" é completamente apaixonado por você, dentro de seu coração há grandes momentos compartilhados ao seu lado.</p>
+<p>Dados comprovam que Isac é completamente apaixonado por você, dentro de seu coração há grandes momentos compartilhados ao seu lado.</p>
 
-<p>Nós, responsáveis pelos sentimentos de "" queremos te presentear como forma de agradecimento. </p>
+<p>Nós, responsáveis pelos sentimentos do Isac queremos te presentear como forma de agradecimento. </p>
 
 <a href="../presente/presente.html">Clique aqui para resgatar seu presente</a>
 
-<p>Ps: "" te ama ! &#128151</p>
+<p>Ps: Isac te ama ! &#128151</p>
 
 </div>
 </div>
