--- a/presente/presente.html
+++ b/presente/presente.html
@@ -15,28 +15,28 @@
 
             <h1>Escolha:</h1>
 
-    <div id="cafe">
+    <div id="Açai">
 
     <a href="../resgatado/resgatado.html">
-        <p>Café da manhã gourmet</p>
+        <p>Açai</p>
     </a>
 
     </div>
 
 
-    <div id="fast">
+    <div id="Burguer">
 
         <a href="../resgatado/resgatado.html">
-            <p>Fast food favorito</p>
+            <p>Hamburguer</p>
         </a>
     
     </div>
 
 
-    <div id="cine">
+    <div id="Cante">
 
         <a href="../resgatado/resgatado.html">
-            <p>Cineminha</p>
+            <p>Cantar uma música</p>
         </a>
     
         </div>
